@@ -186,6 +186,9 @@ Release 2.1.1-beta - UNRELEASED
     MAPREDUCE-5352. Optimize node local splits generated by
     CombineFileInputFormat. (sseth)
 
+    MAPREDUCE-5446. TestJobHistoryEvents and TestJobHistoryParsing have race
+    conditions (jlowe via kihwal)
+
   BUG FIXES
 
     MAPREDUCE-5385. Fixed a bug with JobContext getCacheFiles API. (Omkar Vinit
